# qsspodcasts

./: .gitignore  Cargo.toml  README.md
business_core/: Cargo.toml
business_core/src/: business_core.rs  lib.rs
command_management/: Cargo.toml
command_management/src/: command_engine.rs  command_error.rs  command_executor.rs  command_frontend.rs  command_parser.rs  command_read_utils.rs  command_reader.rs  lib.rs
command_management/src/autocompletion/: autocompletion_command_data.rs  autocompletion_data_list_build.rs  command_parameter_type.rs
command_management/src/commands/: command_enum.rs  command_factories.rs  duration_utils.rs  hash_utils.rs  mod.rs
command_management/src/commands/helps/: command_help_library.rs  command_help_library_builder.rs  command_help_register.rs  mod.rs
command_management/src/mocks/: mod.rs  mp3_player.rs
command_management/src/output/: command_output.rs  mod.rs  output_type.rs
command_management/src/prompt/: minimalistic_prompt_generator.rs  mod.rs  prompt_writer.rs
frontend/: Cargo.toml
frontend/src/: autocompletion_context.rs  crossterm_async_event.rs  lib.rs  screen_action.rs  screen_context.rs  terminal_frontend.rs  terminal_frontend_logger.rs
frontend/src/modal_window/: action_list_builder.rs  interactable_modal_window_context.rs  mod.rs  modal_action.rs  modal_action_callbacks.rs  modal_action_data.rs  modal_actionable.rs  modal_window_context.rs  read_only_element.rs
frontend/src/modal_window/read_only_modal_contents/: first_launch_help.rs  mod.rs
frontend/src/style/: mod.rs  stylized.rs
frontend/src/ui_drawers/: minimalistic_ui_drawer.rs  mod.rs  ui_drawer.rs
frontend/src/ui_drawers/output_management/: mod.rs  output_conversion.rs  output_filter.rs  output_predicates.rs  output_size_computationer.rs  vec_list_items.rs  (+1 more)
fs_utils/: Cargo.toml
fs_utils/src/: lib.rs  permissions.rs  read_utils.rs  write_utils.rs
podcast_download/: Cargo.toml
podcast_download/src/: lib.rs  podcast_downloader.rs
podcast_management/: Cargo.toml
podcast_management/src/: lib.rs  podcast_library.rs
podcast_management/src/builders/: episode_builder.rs  mod.rs  podcast_builder.rs
podcast_management/src/data_objects/: mod.rs  podcast.rs  podcast_episode.rs
podcast_management/src/style/: color.rs  stylized.rs
podcast_player/: Cargo.toml
podcast_player/src/: duration_wrapper.rs  lib.rs  mp3_player.rs  mp3_player_exposer.rs  player_error.rs  player_status.rs  rodio_mp3_player.rs  symphonia_mp3_player.rs
podcast_player/src/players/: gstreamer_mp3_player.rs  mod.rs  mp3_player.rs  rodio_mp3_player.rs
qsspodcasts/: Cargo.toml
qsspodcasts/src/: main.rs
qsspodcasts_autocomplete_server/: Cargo.toml
qsspodcasts_autocomplete_server/src/: autocompleter.rs  autocompletion_response.rs  lib.rs
qsspodcasts_business_core/: Cargo.toml
qsspodcasts_business_core/src/: business_core.rs  event_type.rs  lib.rs  notification.rs
qsspodcasts_command_management/: Cargo.toml
qsspodcasts_command_management/src/: command_engine.rs  command_error.rs  command_executor.rs  command_parser.rs
qsspodcasts_command_management/src/autocompletion/: autocompletion_data_list_build.rs  mod.rs
qsspodcasts_command_management/src/commands/: command_enum.rs  command_factories.rs  duration_utils.rs  mod.rs
qsspodcasts_command_management/src/mocks/: mp3_player.rs
qsspodcasts_command_management/src/output/: command_output.rs  command_output_factory.rs  mod.rs
qsspodcasts_command_management/src/prompt/: minimalistic_prompt_generator.rs  prompt_generator.rs  prompt_writer.rs
qsspodcasts_data_caches/: Cargo.toml
qsspodcasts_data_caches/src/: lib.rs  podcast_state_cache.rs  podcast_state_cache_builder.rs
qsspodcasts_data_transport/: Cargo.toml
qsspodcasts_data_transport/src/: data_receiver.rs  lib.rs
qsspodcasts_data_transport/src/messages_types/: autocompleter.rs  mod.rs
qsspodcasts_frontend/: Cargo.toml
qsspodcasts_frontend/src/: autocompletion_context.rs  lib.rs  screen_action.rs  screen_context.rs  terminal_frontend.rs
qsspodcasts_frontend/src/modal_window/: interactable_modal_window_context.rs  mod.rs  modal_action_data.rs  modal_actionable.rs  readonly_modal_context.rs
qsspodcasts_frontend/src/ui_drawers/: minimalistic_ui_drawer.rs  ui_drawer.rs
qsspodcasts_fs_utils/: Cargo.toml
qsspodcasts_fs_utils/src/: lib.rs  progression_read_utils.rs  progression_write_utils.rs  read_utils.rs  write_utils.rs
qsspodcasts_path_providing/: Cargo.toml
qsspodcasts_path_providing/src/: default_path_provider.rs  dummy_path_provider.rs  path_provider.rs
qsspodcasts_podcast_download/: Cargo.toml
qsspodcasts_podcast_download/src/: podcast_downloader.rs
qsspodcasts_podcast_player/: Cargo.toml
qsspodcasts_podcast_player/src/: duration_wrapper.rs  lib.rs  mp3_player_exposer.rs  player_error.rs  player_status.rs
qsspodcasts_podcast_player/src/enums/: player_state.rs
qsspodcasts_podcast_player/src/players/: gstreamer_mp3_player.rs  mod.rs  mp3_player.rs  symphonia_mp3_player.rs
qsspodcasts_podcast_player/src/traits/: mod.rs  player_observer.rs
qsspodcasts_rss_management/: Cargo.toml
qsspodcasts_rss_management/src/: lib.rs  local_storage.rs
qsspodcasts_rss_management/src/local_storage/: application_dir_initializer.rs  rss_provider.rs
qsspodcasts_rss_management/src/rss_feed_reading/: feed_downloader.rs  mod.rs  utils.rs
qsspodcasts_rss_management/src/url_storage/: mod.rs  url_storer.rs
rss_management/: Cargo.toml
rss_management/src/: application_dir_initializer.rs  channel_tuple.rs  initializer.rs  lib.rs  local_storage.rs  rss_provider.rs  url_reader.rs
rss_management/src/local_storage/: application_dir_initializer.rs  rss_provider.rs
rss_management/src/rss_feed_reading/: feed_downloader.rs  mod.rs  utils.rs
rss_management/src/url_storage/: file_url_storer.rs  url_storer.rs
rss_management/src/url_storer/: file_url_storer.rs  mod.rs  url_storer.rs
str_to_lines/: Cargo.toml
str_to_lines/src/: str_linesplit.rs
tui_rs_spans_to_lines/: Cargo.toml
tui_rs_spans_to_lines/src/: lib.rs  vec_spans_helpers.rs
(+42 files in other folders)
