
[workspace]

members = [
	"qsspodcasts",
	"rss_management",
	"fs_utils",
	"qsspodcasts_business_core",
	"podcast_management",
	"podcast_download",
	"podcast_player",
	"path_providing",
	"frontend",
	"qsspodcasts_abstract_frontend",
	"str_to_lines",
	"data_transport",
	"qsspodcasts_autocomplete_server",
    "qsspodcasts_command_management"
]

[workspace.package]
version = "0.1.0"
authors = ["Maxime Mikotajewski <maximemikotajewski@gmail.com>"]
rust-version = "1.70.0"
edition = "2021"
readme = "README.md"
license = "BSD-2-Clause"
repository = "https://github.com/Quessou/qsspodcasts"
