
[workspace]

members = [
	"qsspodcasts",
	"qsspodcasts_rss_management",
	"qsspodcasts_fs_utils",
	"qsspodcasts_business_core",
	"qsspodcasts_podcast_management",
	"qsspodcasts_podcast_download",
	"qsspodcasts_podcast_player",
	"qsspodcasts_path_providing",
	"qsspodcasts_frontend",
	"qsspodcasts_abstract_frontend",
	"qsspodcasts_str_to_lines",
	"qsspodcasts_data_transport",
	"qsspodcasts_autocomplete_server",
    "qsspodcasts_command_management"
]

[workspace.package]
version = "0.1.0"
authors = ["Maxime Mikotajewski <maximemikotajewski@gmail.com>"]
rust-version = "1.70.0"
edition = "2021"
readme = "README.md"
license = "BSD-2-Clause"
repository = "https://github.com/Quessou/qsspodcasts"
