[package]
name = "business_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss_management= { "path" = "../rss_management" }
podcast_download= { "path" = "../podcast_download" }
podcast_management= { "path" = "../podcast_management" }
podcast_player= { "path" = "../podcast_player" }
path_providing = { "path" = "../path_providing" }