[package]
name = "command_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
log = "0.4.11"
# async-trait = "0.1.53"
podcast_management = {path = "../podcast_management"}
podcast_player = {path = "../podcast_player"}
abstract_frontend = { path = "../abstract_frontend" }

[dev-dependencies]
mockall = "0.11.2"
tokio-test = "*"
test-case = "1.1.0"
