[package]
name = "command_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
log = "0.4.17"
url = "2.3.1"
chrono = "0.4"

podcast_management = {path = "../podcast_management"}
podcast_player = {path = "../podcast_player"}
abstract_frontend = { path = "../abstract_frontend" }
business_core = { path = "../business_core" }
path_providing = { path = "../path_providing" }

[dev-dependencies]
mockall = "0.11.2"
tokio-test = "*"
test-case = "1.1.0"
