[package]
name = "command_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
log = "0.4.17"
url = "2.3.1"
chrono = "0.4"
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.24"

podcast_management = {path = "../podcast_management"}
podcast_player = {path = "../podcast_player"}
abstract_frontend = { path = "../abstract_frontend" }
business_core = { path = "../business_core" }
path_providing = { path = "../path_providing" }
data_transport = { path = "../data_transport" }
once_cell = "1.17.1"

[dev-dependencies]
mockall = "0.11.2"
tokio-test = "*"
test-case = "3.0.0"
