[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { package = "ratatui", version = "0.22.0", features = ["crossterm"], default-features = false }
crossterm = "0.19"
tokio = { version = "1.26.0", features = ["full"] }
command_management = { path = "../command_management" }
podcast_player = { path = "../podcast_player" }
podcast_management = { path = "../podcast_management" }
business_core = {path = "../business_core" }
log = "0.4.17"
simple_logger = "2.1.0"
str_to_lines = { path = "../str_to_lines" }
data_transport = { path = "../data_transport" }
autocomplete_server = {path = "../autocomplete_server"}

[dev-dependencies]
test-case = "3.0.0"
