[package]
name = "frontend"
description = "Default frontend crate for QSSPodcasts. You probably don't need to use it."
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { package = "ratatui", version = "0.22.0", features = ["crossterm"], default-features = false }
crossterm = "0.19"
tokio = { version = "1.26.0", features = ["full"] }
command_management = { package = "qsspodcasts_command_management", path = "../qsspodcasts_command_management" , version = "0.1.0"}
podcast_player = { path = "../podcast_player" }
podcast_management = { path = "../podcast_management" }
business_core = {package = "qsspodcasts_business_core", path = "../qsspodcasts_business_core" , version = "0.1.0"}
log = "0.4.17"
simple_logger = "2.1.0"
str_to_lines = { path = "../str_to_lines" }
data_transport = { path = "../data_transport" }
autocomplete_server = {package = "qsspodcasts_autocomplete_server", path = "../qsspodcasts_autocomplete_server", version = "0.1.0"}

[dev-dependencies]
test-case = "3.0.0"
