[package]
name = "fs_utils"
version = "0.1.0"
authors = ["Maxime Mikotajewski <maximemikotajewski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
bytes = "1.1.0"

[dev-dependencies]
test-case = "1.1.0"
