[package]
name = "podcast_download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
rss_management= { "path" = "../rss_management" }
podcast_management= { "path" = "../podcast_management" }

[dev-dependencies]
tokio-test = "*"