[package]
name = "podcast_download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
futures = "0.3.21"
bytes = "1.1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
rss_management= { path = "../rss_management" }
podcast_management= { path = "../podcast_management" }
fs_utils= { path = "../fs_utils" }
path_providing= { path = "../path_providing" }

[dev-dependencies]
tokio-test = "*"
