[package]
name = "podcast_download"
description = "Podcast download utilities for QSSPodcasts, you probably don't need it."
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
log = "0.4.17"
futures = "0.3.21"
bytes = "1.1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.26.0", features = ["full"] }
rss_management= { path = "../rss_management" }
podcast_management= { path = "../podcast_management" }
fs_utils= { path = "../fs_utils" }
path_providing= { path = "../path_providing" }

[dev-dependencies]
tokio-test = "*"
