[package]
name = "podcast_management"
description = "podcast management library for QSSPodcasts, you probably don't need it."
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rss = "2.0.0"
sha-1 = "0.10.0"
hex = "0.4.3"
chrono = "0.4"
html2text = "0.4.3"
