[package]
name = "podcast_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
rodio = "0.15.0"
symphonia = "0.5.0"

log = "0.4.11"
podcast_management = { path = "../podcast_management" }
path_providing = { path = "../path_providing" }
