[package]
name = "podcast_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
rodio = "0.15.0"
# gstreamer = "0.18"
gstreamer-player = "0.20"
chrono = "0.4"
log = "0.4.17"
podcast_management = { path = "../podcast_management" }
path_providing = { path = "../path_providing" }


#[dev-dependencies]
mockall = "0.11.2"
