[package]
name = "podcast_player"
description = "Podcast player library for QSSPodcasts, you probably don't need it."
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
rodio = "0.15.0"
# gstreamer = "0.18"
gstreamer-play = "0.20"
gstreamer-pbutils = "0.20"
chrono = "0.4"
log = "0.4.17"
podcast_management = { path = "../podcast_management" }
path_providing = { path = "../path_providing" }


#[dev-dependencies]
mockall = "0.11.2"
