[package]
name = "qsspodcasts"
version = "0.1.0"
authors = ["Quessours"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
frontend = { path = "../frontend" }
clap = { version = "3.0", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
abstract_frontend = { path = "../abstract_frontend" }
business_core = { path = "../business_core" }
command_management = { path = "../command_management" }
podcast_player = { path = "../podcast_player"}
path_providing = { path = "../path_providing"}
data_transport = { path = "../data_transport" }
simple_logger = "2.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
