[package]
name = "qsspodcasts"
description = "An attempt to make a CLI podcast player"
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures = "0.3.21"
frontend = { path = "../frontend" }
clap = { version = "3.0", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
abstract_frontend = { package = "qsspodcasts_abstract_frontend",path = "../qsspodcasts_abstract_frontend" , version = "0.1.0"}
business_core = { package = "qsspodcasts_business_core", path = "../qsspodcasts_business_core" , version = "0.1.0"}
command_management = {package = "qsspodcasts_command_management", path = "../qsspodcasts_command_management" , version = "0.1.0"}
podcast_player = { path = "../podcast_player"}
path_providing = { path = "../path_providing"}
data_transport = { path = "../data_transport" }
autocomplete_server = { package = "qsspodcasts_autocomplete_server", path = "../qsspodcasts_autocomplete_server", version = "0.1.0" }
simple_logger = "2.1.0"
