[package]
name = "qsspodcasts_business_core"
description = "The business core for QSS podcasts, you probably don't need it."
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss_management= { path = "../rss_management" }
podcast_download= { path = "../podcast_download" }
podcast_management= { path = "../podcast_management" }
podcast_player= { path = "../podcast_player" }
path_providing = { path = "../path_providing" }
data_transport = { path = "../data_transport" }

tokio = { version = "1.26.0", features = ["full"] }
log = "0.4.17"
chrono = "0.4"
