[package]
name = "qsspodcasts_business_core"
description = "The business core for QSS podcasts, you probably don't need it."
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss_management= { package = "qsspodcasts_rss_management",path = "../qsspodcasts_rss_management", version = "0.1.0" }
podcast_download= { package = "qsspodcasts_podcast_download",path = "../qsspodcasts_podcast_download", version = "0.1.0" }
podcast_management= { package = "qsspodcasts_podcast_management",path = "../qsspodcasts_podcast_management", version = "0.1.0" }
podcast_player= { package = "qsspodcasts_podcast_player",path = "../qsspodcasts_podcast_player", version = "0.1.0" }
path_providing= { package = "qsspodcasts_path_providing",path = "../qsspodcasts_path_providing", version = "0.1.0" }
data_transport = { package = "qsspodcasts_data_transport",path = "../qsspodcasts_data_transport" , version = "0.1.0"}
fs_utils= { package = "qsspodcasts_fs_utils",path = "../qsspodcasts_fs_utils", version = "0.1.0" }
async-trait = "0.1.53"

tokio = { version = "1.26.0", features = ["full"] }
log = "0.4.17"
chrono = "0.4"
