[package]
name = "qsspodcasts_command_management"
description = "Abstract frontend library for QSSPodcasts, you probably don't need it."
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
log = "0.4.17"
url = "2.3.1"
chrono = "0.4"
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.24"

podcast_management = {path = "../podcast_management"}
podcast_player = {path = "../podcast_player"}
abstract_frontend = { package = "qsspodcasts_abstract_frontend", path = "../qsspodcasts_abstract_frontend" , version = "0.1.0"}
business_core = { package = "qsspodcasts_business_core", path = "../qsspodcasts_business_core" , version = "0.1.0"}
path_providing = { path = "../path_providing" }
data_transport = { path = "../data_transport" }
once_cell = "1.17.1"

[dev-dependencies]
mockall = "0.11.2"
tokio-test = "*"
test-case = "3.0.0"
