[package]
name = "qsspodcasts_command_management"
description = "Abstract frontend library for QSSPodcasts, you probably don't need it."
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4.17"
url = "2.3.1"
chrono = "0.4"
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.24"

podcast_management= { package = "qsspodcasts_podcast_management",path = "../qsspodcasts_podcast_management", version = "0.1.0" }
podcast_player = {package = "qsspodcasts_podcast_player", path = "../qsspodcasts_podcast_player", version = "0.1.0" }
abstract_frontend = { package = "qsspodcasts_abstract_frontend", path = "../qsspodcasts_abstract_frontend" , version = "0.1.0"}
business_core = { package = "qsspodcasts_business_core", path = "../qsspodcasts_business_core" , version = "0.1.0"}
path_providing= { package = "qsspodcasts_path_providing",path = "../qsspodcasts_path_providing", version = "0.1.0" }
data_transport = { package = "qsspodcasts_data_transport",path = "../qsspodcasts_data_transport" , version = "0.1.0"}
once_cell = "1.17.1"

[dev-dependencies]
mockall = "0.11.2"
tokio-test = "0.4.2"
test-case = "3.0.0"
async-trait = "0.1.53"
