[package]
name = "qsspodcasts_fs_utils"
description = "filesystem utils for QSSPodcasts. You probably don't have any need for it."
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
bytes = "1.1.0"
itertools = "0.11.0"

[dev-dependencies]
test-case = "3.0.0"

