[package]
name = "qsspodcasts_path_providing"
description = "Path providing utilities for QSSPodcasts, you probably don't need it."
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
home = "0.5.3"
podcast_management= { package = "qsspodcasts_podcast_management",path = "../qsspodcasts_podcast_management", version = "0.1.0" }

[dev-dependencies]
mockall = "0.11.2"
