[package]
name = "qsspodcasts_podcast_download"
description = "Podcast download utilities for QSSPodcasts, you probably don't need it."
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
log = "0.4.17"
futures = "0.3.21"
bytes = "1.1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.26.0", features = ["full"] }
rss_management= { package = "qsspodcasts_rss_management",path = "../qsspodcasts_rss_management", version = "0.1.0" }
podcast_management= { package = "qsspodcasts_podcast_management",path = "../qsspodcasts_podcast_management", version = "0.1.0" }
fs_utils= { package = "qsspodcasts_fs_utils",path = "../qsspodcasts_fs_utils", version = "0.1.0" }
path_providing= { package = "qsspodcasts_path_providing",path = "../qsspodcasts_path_providing", version = "0.1.0" }

[dev-dependencies]
tokio-test = "0.4.2"
