[package]
name = "qsspodcasts_podcast_player"
description = "Podcast player library for QSSPodcasts, you probably don't need it."
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
rodio = "0.15.0"
# gstreamer = "0.18"
gstreamer-play = "0.20"
gstreamer-pbutils = "0.20"
chrono = "0.4"
log = "0.4.17"
podcast_management= { package = "qsspodcasts_podcast_management",path = "../qsspodcasts_podcast_management", version = "0.1.0" }
path_providing = { package = "qsspodcasts_path_providing", path = "../qsspodcasts_path_providing", version = "0.1.0" }
async-trait = "0.1.53"

#[dev-dependencies]
mockall = "0.11.2"
