[package]
name = "qsspodcasts_rss_management"
description = "RSS feed management utilites for QSSPodcasts, you probably don't need it"
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures = "0.3.21"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.26.0", features = ["full"] }
rss = "2.0.0"
log = "0.4.17"
fs_utils= { package = "qsspodcasts_fs_utils",path = "../qsspodcasts_fs_utils", version = "0.1.0" }
path_providing= { package = "qsspodcasts_path_providing",path = "../qsspodcasts_path_providing", version = "0.1.0" }

[dev-dependencies]
tokio-test = "*"
