[package]
name = "rss_management"
version = "0.1.0"
authors = ["Maxime Mikotajewski <mmikotajewski@witekio.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
rss = "2.0.0"
log = "0.4.11"
fs_utils = { "path" = "../fs_utils" }
home = "0.5.3"

[dev-dependencies]
tokio-test = "*"
