[package]
name = "rss_management"
version = "0.1.0"
authors = ["Maxime Mikotajewski <mmikotajewski@witekio.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.26.0", features = ["full"] }
rss = "2.0.0"
log = "0.4.17"
fs_utils = { "path" = "../fs_utils" }
path_providing = { "path" = "../path_providing" }

[dev-dependencies]
tokio-test = "*"
