[package]
name = "tui_rs_spans_to_lines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.15", features = ["crossterm"], default-features = false }
crossterm = "0.19"
str_to_lines = { path = "../str_to_lines" }

[dev-dependencies]
test-case = "1.1.0"
